# mlflow_sweep

./: .gitignore  404.html  CHANGELOG.md  example.py  index.html  mkdocs.yaml  objects.inv  pyproject.toml  sweep.yaml  sweep2.yaml  tasks.py
.github/workflows/: docs.yaml  tests.yaml
api_references/: index.html
configs/: sweep.yaml
configuration/: index.html
docs/: api_references.md  configuration.md  index.md  quickstart.md
examples/: index.html
examples/dummy/: sweep.yaml
examples/mlflow_project/: mnist_model.pth
examples/sklearn/: main.py  sweep.yaml
quickstart/: index.html
search/: search_index.json
src/mlflow_sweep/: __init__.py  cli.py  commands.py  models.py  plotting.py  runcontext.py  sampler.py  sweepstate.py  utils.py
tests/: test_cli.py  test_commands.py  test_models.py  test_plotting.py  test_sampler.py  test_utils.py
