[project]
name = "mlflow-sweep"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Nicki Skafte", email = "skaftenicki@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "click>=8.2.1",
    "mlflow>=3.1.0",
    "pydantic>=2.11.5",
    "pyyaml>=6.0.2",
    "sweeps>=0.2.0",
]

scripts.mlflow = "mlflow_sweep.cli:mlflow_cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipython>=9.3.0",
    "typer>=0.16.0",
]
