[build-system]
build-backend = "hatchling.build"

requires = [ "hatchling" ]

[project]
name = "mlflow-sweep"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
  { name = "Nicki Skafte", email = "skaftenicki@gmail.com" },
]
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "click>=8.2.1",
  "mlflow>=3.1",
  "pydantic>=2.11.5",
  "pyyaml>=6.0.2",
  "sweeps>=0.2",
]

scripts.mlflow = "mlflow_sweep.cli:mlflow_cli"

[dependency-groups]
dev = [
  "ipython>=9.3",
  "pre-commit>=4.2",
  "ruff>=0.11.13",
  "ty>=0.0.1a10",
  "typer>=0.16",
]
